# git-evtag

./: .gitignore  .travis.yml  COPYING.README  Makefile-decls.am  Makefile-git-evtag.am  Makefile-tests.am  Makefile.am  Makefile.dist-packaging  README.md  autogen.sh  configure.ac  git-evtag.spec.in  meson.build  meson_options.txt
.github/workflows/: check.yml
man/: Makefile-man.am  git-evtag.xml  meson.build
packaging/: Makefile.dist-packaging  builddeps.sh  git-evtag.spec.in  meson-compat-install-symlink.sh
rust/: Cargo.toml  Makefile-inc.am  meson.build
rust/src/: main.rs
src/: Makefile-git-evtag.am  git-evtag-compute-py  git-evtag.c  meson.build
tests/: Makefile-tests.am  git-evtag-compute-py  libtest.sh  meson.build  tap-test  tap.test.in  test-basic.sh
tests/gpghome/: meson.build
tests/gpghome/trusted/: meson.build
